--- a/Homework 5/HW5.ipynb
+++ b/Homework 5/HW5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 811,
+   "execution_count": 1325,
    "id": "a85dd9bb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 812,
+   "execution_count": 1326,
    "id": "ea8f0f52",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "'1.10.2'"
       ]
      },
-     "execution_count": 812,
+     "execution_count": 1326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 813,
+   "execution_count": 1327,
    "id": "01ae0123",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 814,
+   "execution_count": 1328,
    "id": "ddc4194e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 1329,
    "id": "8794c220",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 816,
+   "execution_count": 1330,
    "id": "5ba8a8cc",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 817,
+   "execution_count": 1331,
    "id": "7c7d98ed",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 818,
+   "execution_count": 1332,
    "id": "ce504611",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 1333,
    "id": "668a1578",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 1334,
    "id": "79ab20bc",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 1335,
    "id": "3edc1968",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 822,
+   "execution_count": 1336,
    "id": "976bfd1c",
    "metadata": {
     "scrolled": true
@@ -221,7 +221,7 @@
        "tensor([nan, nan, nan])"
       ]
      },
-     "execution_count": 822,
+     "execution_count": 1336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 823,
+   "execution_count": 1337,
    "id": "6aaaf5cc",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "tensor([ 0.8937,  0.8937, -1.8435])"
       ]
      },
-     "execution_count": 823,
+     "execution_count": 1337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 824,
+   "execution_count": 1338,
    "id": "b888560f",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 825,
+   "execution_count": 1339,
    "id": "a9ace2f7",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "tensor([ 1.2221,  1.2221, -0.8447])"
       ]
      },
-     "execution_count": 825,
+     "execution_count": 1339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,17 +333,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 826,
+   "execution_count": 1340,
+   "id": "1fdb3a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 500, Loss 3.745214\n",
+      "Epoch 1000, Loss 2.519774\n",
+      "Epoch 1500, Loss 2.354594\n",
+      "Epoch 2000, Loss 2.339890\n",
+      "Epoch 2500, Loss 2.342102\n",
+      "Epoch 3000, Loss 2.344257\n",
+      "Epoch 3500, Loss 2.345315\n",
+      "Epoch 4000, Loss 2.345767\n",
+      "Epoch 4500, Loss 2.345953\n",
+      "Epoch 5000, Loss 2.346025\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1.7575,  1.7575, -6.9728])"
+      ]
+     },
+     "execution_count": 1340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_loop(n_epochs = 5000, lr = 7e-3, params = torch.tensor([1.0,1.0,0.0]), t_u = t_un, t_c = t_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1341,
    "id": "91d5eeb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x26ac7b47e80>]"
+       "[<matplotlib.lines.Line2D at 0x26ad2652a00>]"
       ]
      },
-     "execution_count": 826,
+     "execution_count": 1341,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -393,26 +430,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 827,
+   "execution_count": 1342,
    "id": "1f547b05",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([1, 2, 0, 3]), tensor([4]))"
-      ]
-     },
-     "execution_count": 827,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "housing = pd.read_csv('https://raw.githubusercontent.com/pcur/ECGR-4105/main/Homework%201/Housing.csv')\n",
     "\n",
     "Y_house = housing.values[:,0]\n",
-    "t_c = torch.tensor(housing.values[:,0].tolist())\n",
+    "t_c = 0.1 * torch.tensor(housing.values[:,0].tolist())\n",
     "\n",
     "area = torch.tensor(housing.values[:,1].reshape(len(Y_house),1).tolist())\n",
     "rooms = torch.tensor(housing.values[:,2].reshape(len(Y_house),1).tolist())\n",
@@ -420,7 +446,7 @@
     "floor = torch.tensor(housing.values[:,4].reshape(len(Y_house),1).tolist())\n",
     "park = torch.tensor(housing.values[:,10].reshape(len(Y_house),1).tolist())\n",
     "\n",
-    "t_u = torch.stack((area,rooms,bath,floor,park))\n",
+    "#t_u = torch.stack((area,rooms,bath,floor,park))\n",
     "\n",
     "n_samples = t_u.shape[0]\n",
     "n_val = int(0.2 * n_samples)\n",
@@ -430,55 +456,67 @@
     "train_indices = shuffled_indices[:-n_val]\n",
     "val_indices = shuffled_indices[-n_val:]\n",
     "\n",
-    "train_indices, val_indices"
+    "#t_u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 828,
+   "execution_count": 1343,
    "id": "9ab83a7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_t_c = t_c[train_indices]\n",
-    "train_t_u = t_u[train_indices]\n",
+    "#train_t_u = t_u[train_indices]\n",
     "\n",
     "val_t_c = t_c[val_indices]\n",
-    "val_t_u = t_u[val_indices]\n",
+    "#val_t_u = t_u[val_indices]\n",
     "\n",
     "train_t_un = 0.1 * train_t_u\n",
-    "val_t_un = 0.1 * val_t_u\n",
+    "#val_t_un = 0.1 * val_t_u\n",
+    "\n",
+    "train_area = 0.1* area[train_indices]\n",
+    "train_rooms = 0.1* rooms[train_indices]\n",
+    "train_bath = 0.1 * bath[train_indices]\n",
+    "train_floor = 0.1 * floor[train_indices]\n",
+    "train_park = 0.1 * park[train_indices]\n",
+    "\n",
+    "val_area = 0.1 * area[val_indices]\n",
+    "val_rooms = 0.1 * rooms[val_indices]\n",
+    "val_bath = 0.1 * bath[val_indices]\n",
+    "val_floor = 0.1 * floor[val_indices]\n",
+    "val_park = 0.1 * park[val_indices]\n",
     "\n",
     "w_n = torch.zeros(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 829,
+   "execution_count": 1344,
    "id": "5c53dec1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model2 (t_u, w1, w2,w3,w4,w5, b):\n",
-    "    return t_u*w5 + t_u*w4 + t_u*w3 + t_u*w2 + t_u *w1 + b"
+    "def model2 (t_area, t_rooms, t_bath, t_floor, t_park, w1, w2,w3,w4,w5, b):\n",
+    "    return t_area*w5 + t_rooms*w4 + t_bath*w3 + t_floor*w2 + t_park *w1 + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 830,
+   "execution_count": 1345,
    "id": "dd1c2851",
    "metadata": {},
    "outputs": [],
    "source": [
     "def training_loop2 (n_epochs, optimizer, params, train_t_u, val_t_u, train_t_c, val_t_c):\n",
     "    for epoch in range(1,n_epochs + 1):\n",
-    "        train_t_p = model2(train_t_u, *params)\n",
+    "        train_t_p = model2(*train_t_u, *params)\n",
     "        train_loss = loss_fn(train_t_p, train_t_c)\n",
     "        \n",
-    "        with torch.no_grad():\n",
-    "            val_t_p = model2(val_t_u, *params)\n",
-    "            val_loss = loss_fn(val_t_p, val_t_c)\n",
-    "            assert val_loss.requires_grad == False\n",
+    " #       with torch.no_grad():\n",
+    "        val_t_p = model2(*val_t_u, *params)\n",
+    "        val_loss = loss_fn(val_t_p, val_t_c)\n",
+    "#            assert val_loss.requires_grad == False\n",
     "            \n",
     "        optimizer.zero_grad()\n",
     "        train_loss.backward()\n",
@@ -492,49 +530,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 831,
-   "id": "6a123ef8",
+   "execution_count": 1346,
+   "id": "57379940",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_forward(t_u, t_c, is_train):\n",
     "    with torch.set_grad_enabled(is_train):\n",
-    "        t_p = model(t_u, *params)\n",
+    "        t_p = model(*t_u, *params)\n",
     "        loss = loss_fn(t_p, t_c)\n",
     "    return loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 832,
-   "id": "1ba35787",
+   "execution_count": 1347,
+   "id": "f921377f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Training loss nan, Validation loss nan\n"
+      "Epoch 500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 1000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 1500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 2000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 2500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 3000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 3500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 4000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 4500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
+      "Epoch 5000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([nan, nan, nan, nan, nan, nan], requires_grad=True)"
+       "tensor([1., 1., 1., 1., 1., 0.], requires_grad=True)"
       ]
      },
-     "execution_count": 832,
+     "execution_count": 1347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "linear_model = nn.Linear(5,1)\n",
+    "\n",
+    "optimizer = optim.SGD(\n",
+    "    linear_model.parameters(),\n",
+    "    lr = 1e-4)\n",
+    "\n",
+    "\n",
+    "train_t_un = torch.stack((train_area,train_rooms,train_bath,train_floor,train_park))\n",
+    "val_t_un = torch.stack((val_area,val_rooms,val_bath,val_floor,val_park))\n",
+    "\n",
+    "\n",
+    "\n",
     "params = torch.tensor([1.0, 1.0, 1.0, 1.0, 1.0, 0.0], requires_grad=True)\n",
-    "learning_rate = 1e-1\n",
-    "optimizer = optim.SGD([params], lr = learning_rate)\n",
-    "training_loop2(n_epochs = 500, \n",
+    "#optimizer = optim.SGD([params], lr = learning_rate)\n",
+    "training_loop2(n_epochs = 5000, \n",
     "              optimizer = optimizer, \n",
-    "             params = params, \n",
+    "              params = params, \n",
     "              train_t_u = train_t_un, \n",
     "              val_t_u = val_t_un, \n",
     "              train_t_c = train_t_c, \n",
@@ -556,8 +614,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 844,
-   "id": "4102f530",
+   "execution_count": 1348,
+   "id": "6a59778f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,30 +638,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 845,
-   "id": "02bfe7b5",
+   "execution_count": 1349,
+   "id": "f8bc3982",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 156555047600128.0000, Validation loss 130188100763648.000000\n",
-      "Epoch 50, Training loss 168306078121984.0000, Validation loss 140929570701312.000000\n",
-      "Epoch 100, Training loss 167970198257664.0000, Validation loss 140622086275072.000000\n",
-      "Epoch 150, Training loss 167634989481984.0000, Validation loss 140315214217216.000000\n",
-      "Epoch 200, Training loss 167300502126592.0000, Validation loss 140008979693568.000000\n"
+      "Epoch 1, Training loss 1299149225984.0000, Validation loss 1002197090304.000000\n",
+      "Epoch 50, Training loss 1277175660544.0000, Validation loss 982804791296.000000\n",
+      "Epoch 100, Training loss 1254641106944.0000, Validation loss 962941550592.000000\n",
+      "Epoch 150, Training loss 1232508944384.0000, Validation loss 943456059392.000000\n",
+      "Epoch 200, Training loss 1210771308544.0000, Validation loss 924341633024.000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([9])) that is different to the input size (torch.Size([5, 9, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([2])) that is different to the input size (torch.Size([5, 2, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
     }
    ],
    "source": [
-    "linear_model = nn.Linear(1,1)\n",
+    "#linear_model = nn.Linear(5,1)\n",
     "\n",
     "seq_model = nn.Sequential(\n",
     "            nn.Linear(1,8),\n",
-    "            nn.ReLU(),\n",
+    "            nn.Tanh(),\n",
     "            nn.Linear(8,1))\n",
-    "\n",
     "\n",
     "optimizer = optim.SGD(\n",
     "    seq_model.parameters(),\n",
@@ -630,41 +697,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 849,
-   "id": "3c81ee19",
+   "execution_count": 1350,
+   "id": "1542e6e2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([4])) that is different to the input size (torch.Size([4, 545, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([1])) that is different to the input size (torch.Size([1, 545, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 156555316035584.0000, Validation loss 130188100763648.000000\n",
-      "Epoch 50, Training loss 156555316035584.0000, Validation loss 130188100763648.000000\n",
-      "Epoch 100, Training loss 156555316035584.0000, Validation loss 130188100763648.000000\n",
-      "Epoch 150, Training loss 156555316035584.0000, Validation loss 130188100763648.000000\n",
-      "Epoch 200, Training loss 156555316035584.0000, Validation loss 130188100763648.000000\n"
+      "Epoch 1, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
+      "Epoch 50, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
+      "Epoch 100, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
+      "Epoch 150, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
+      "Epoch 200, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n"
      ]
     }
    ],
    "source": [
     "seq_model = nn.Sequential(\n",
-    "            nn.Linear(1,8),\n",
+    "            nn.Linear(1, 8),\n",
     "            nn.Tanh(),\n",
-    "            nn.Linear(8,10),\n",
+    "            nn.Linear(8,8),\n",
     "            nn.Tanh(),\n",
-    "            nn.Linear(10,12),\n",
+    "            nn.Linear(8,8),\n",
     "            nn.Sigmoid(),\n",
-    "            nn.Linear(12,8),\n",
+    "            nn.Linear(8,8),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(8,1))\n",
     "\n",
@@ -682,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240ea3fe",
+   "id": "aaf9778f",
    "metadata": {},
    "outputs": [],
    "source": []
