--- a/Homework 5/HW5.ipynb
+++ b/Homework 5/HW5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1325,
+   "execution_count": 1404,
    "id": "a85dd9bb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1326,
+   "execution_count": 1405,
    "id": "ea8f0f52",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "'1.10.2'"
       ]
      },
-     "execution_count": 1326,
+     "execution_count": 1405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1327,
+   "execution_count": 1406,
    "id": "01ae0123",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1328,
+   "execution_count": 1407,
    "id": "ddc4194e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1329,
+   "execution_count": 1408,
    "id": "8794c220",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1330,
+   "execution_count": 1409,
    "id": "5ba8a8cc",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1331,
+   "execution_count": 1410,
    "id": "7c7d98ed",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1332,
+   "execution_count": 1411,
    "id": "ce504611",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1333,
+   "execution_count": 1412,
    "id": "668a1578",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1334,
+   "execution_count": 1413,
    "id": "79ab20bc",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1335,
+   "execution_count": 1414,
    "id": "3edc1968",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1336,
+   "execution_count": 1415,
    "id": "976bfd1c",
    "metadata": {
     "scrolled": true
@@ -221,7 +221,7 @@
        "tensor([nan, nan, nan])"
       ]
      },
-     "execution_count": 1336,
+     "execution_count": 1415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1337,
+   "execution_count": 1416,
    "id": "6aaaf5cc",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "tensor([ 0.8937,  0.8937, -1.8435])"
       ]
      },
-     "execution_count": 1337,
+     "execution_count": 1416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1338,
+   "execution_count": 1417,
    "id": "b888560f",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1339,
+   "execution_count": 1418,
    "id": "a9ace2f7",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "tensor([ 1.2221,  1.2221, -0.8447])"
       ]
      },
-     "execution_count": 1339,
+     "execution_count": 1418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1340,
-   "id": "1fdb3a00",
+   "execution_count": 1419,
+   "id": "37bedd6d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "tensor([ 1.7575,  1.7575, -6.9728])"
       ]
      },
-     "execution_count": 1340,
+     "execution_count": 1419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1341,
+   "execution_count": 1420,
    "id": "91d5eeb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x26ad2652a00>]"
+       "[<matplotlib.lines.Line2D at 0x26ae1e23fa0>]"
       ]
      },
-     "execution_count": 1341,
+     "execution_count": 1420,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1342,
+   "execution_count": 1421,
    "id": "1f547b05",
    "metadata": {},
    "outputs": [],
@@ -448,23 +448,32 @@
     "\n",
     "#t_u = torch.stack((area,rooms,bath,floor,park))\n",
     "\n",
-    "n_samples = t_u.shape[0]\n",
+    "n_samples = area.shape[0]\n",
     "n_val = int(0.2 * n_samples)\n",
     "\n",
     "shuffled_indices = torch.randperm(n_samples)\n",
     "\n",
     "train_indices = shuffled_indices[:-n_val]\n",
-    "val_indices = shuffled_indices[-n_val:]\n",
-    "\n",
-    "#t_u"
+    "val_indices = shuffled_indices[-n_val:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1343,
+   "execution_count": 1422,
    "id": "9ab83a7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([436, 1])"
+      ]
+     },
+     "execution_count": 1422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_t_c = t_c[train_indices]\n",
     "#train_t_u = t_u[train_indices]\n",
@@ -472,8 +481,10 @@
     "val_t_c = t_c[val_indices]\n",
     "#val_t_u = t_u[val_indices]\n",
     "\n",
-    "train_t_un = 0.1 * train_t_u\n",
+    "#train_t_un = 0.1 * train_t_u\n",
     "#val_t_un = 0.1 * val_t_u\n",
+    "\n",
+    "\n",
     "\n",
     "train_area = 0.1* area[train_indices]\n",
     "train_rooms = 0.1* rooms[train_indices]\n",
@@ -487,12 +498,17 @@
     "val_floor = 0.1 * floor[val_indices]\n",
     "val_park = 0.1 * park[val_indices]\n",
     "\n",
-    "w_n = torch.zeros(5)"
+    "train_t_un = torch.stack((train_area,train_rooms,train_bath,train_floor,train_park))\n",
+    "val_t_un = torch.stack((val_area,val_rooms,val_bath,val_floor,val_park))\n",
+    "\n",
+    "w_n = torch.zeros(5)\n",
+    "\n",
+    "train_area.size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1344,
+   "execution_count": 1423,
    "id": "5c53dec1",
    "metadata": {},
    "outputs": [],
@@ -503,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1345,
+   "execution_count": 1424,
    "id": "dd1c2851",
    "metadata": {},
    "outputs": [],
@@ -530,8 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1346,
-   "id": "57379940",
+   "execution_count": 1425,
+   "id": "5832dd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,24 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1347,
-   "id": "f921377f",
+   "execution_count": 1426,
+   "id": "ddf2f919",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 1000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 1500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 2000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 2500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 3000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 3500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 4000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 4500, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n",
-      "Epoch 5000, Training loss 1297033986048.0000, Validation loss 1000525856768.0000\n"
+      "Epoch 500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 1000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 1500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 2000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 2500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 3000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 3500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 4000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 4500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
+      "Epoch 5000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n"
      ]
     },
     {
@@ -570,7 +586,7 @@
        "tensor([1., 1., 1., 1., 1., 0.], requires_grad=True)"
       ]
      },
-     "execution_count": 1347,
+     "execution_count": 1426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,10 +597,6 @@
     "optimizer = optim.SGD(\n",
     "    linear_model.parameters(),\n",
     "    lr = 1e-4)\n",
-    "\n",
-    "\n",
-    "train_t_un = torch.stack((train_area,train_rooms,train_bath,train_floor,train_park))\n",
-    "val_t_un = torch.stack((val_area,val_rooms,val_bath,val_floor,val_park))\n",
     "\n",
     "\n",
     "\n",
@@ -614,8 +626,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1348,
-   "id": "6a59778f",
+   "execution_count": 1427,
+   "id": "3028a94d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,29 +650,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1349,
-   "id": "f8bc3982",
+   "execution_count": 1428,
+   "id": "1c38068e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 1299149225984.0000, Validation loss 1002197090304.000000\n",
-      "Epoch 50, Training loss 1277175660544.0000, Validation loss 982804791296.000000\n",
-      "Epoch 100, Training loss 1254641106944.0000, Validation loss 962941550592.000000\n",
-      "Epoch 150, Training loss 1232508944384.0000, Validation loss 943456059392.000000\n",
-      "Epoch 200, Training loss 1210771308544.0000, Validation loss 924341633024.000000\n"
+      "Epoch 1, Training loss 259047407616.0000, Validation loss 274502385664.000000\n",
+      "Epoch 50, Training loss 255251103744.0000, Validation loss 270576795648.000000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([9])) that is different to the input size (torch.Size([5, 9, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([436])) that is different to the input size (torch.Size([5, 436, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([2])) that is different to the input size (torch.Size([5, 2, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "C:\\Users\\curca\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py:520: UserWarning: Using a target size (torch.Size([109])) that is different to the input size (torch.Size([5, 109, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 100, Training loss 251319549952.0000, Validation loss 266510221312.000000\n",
+      "Epoch 150, Training loss 247458152448.0000, Validation loss 262515015680.000000\n",
+      "Epoch 200, Training loss 243665666048.0000, Validation loss 258589851648.000000\n"
      ]
     }
    ],
@@ -697,19 +715,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
-   "id": "1542e6e2",
+   "execution_count": 1429,
+   "id": "9bebb484",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
-      "Epoch 50, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
-      "Epoch 100, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
-      "Epoch 150, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n",
-      "Epoch 200, Training loss 1299149619200.0000, Validation loss 1002197155840.000000\n"
+      "Epoch 1, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
+      "Epoch 50, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
+      "Epoch 100, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
+      "Epoch 150, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
+      "Epoch 200, Training loss 259047686144.0000, Validation loss 274502696960.000000\n"
      ]
     }
    ],
@@ -739,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf9778f",
+   "id": "b7769af0",
    "metadata": {},
    "outputs": [],
    "source": []
